--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # add the following to _config.yml file
 title: Muhammad Hasif Adli
+logo: assets/img/Headshot.png
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
