--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # add the following to _config.yml file
-title: Muhammad Hasif Adli
+title: Muhammad Hasif Adli Bin Salleh
 logo: assets/img/Headshot.png
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
